--- a/return.scss
+++ b/return.scss
@@ -38,10 +38,27 @@
     font-size: 18px;
   }
 }
+.return__btns {
+  display: flex;
+  .return__btn {
+    border-radius: 11px;
+    border: none;
+    background-color: #12a0d6;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+  }
+  .return__Nobtn {
+    border-radius: 11px;
+    background-color: #ffffff;
+    width: 50px;
+    height: 50px;
+  }
+}
 
 .return__returnering {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
 }
 
 .return__parent {
@@ -52,9 +69,28 @@
     position: relative;
     top: 0;
     left: 0;
+    display: block;
+    margin: auto;
+    margin-top: 40px;
   }
 
   .return__scanner {
-    display: block;
+    position: absolute;
+    top: 140px;
+    left: 84px;
   }
+}
+
+.return__info {
+  position: absolute;
+  bottom: 0px;
+  right: 11px;
+  text-align: center;
+  color: white;
+  font-size: 22px;
+}
+.return__background {
+  width: 274px;
+  height: 140px;
+  margin-left: 93px;
 }
