--- a/returnNo.scss
+++ b/returnNo.scss
@@ -34,27 +34,26 @@
   .sidenav {
     padding-top: 15px;
   }
-
   .sidenav a {
     font-size: 18px;
   }
 }
 .return__btns {
   display: flex;
-}
-.return__btns .return__btn {
-  border-radius: 11px;
-  border: none;
-  background-color: #12a0d6;
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
-}
-.return__btns .return__Nobtn {
-  border-radius: 11px;
-  background-color: #ffffff;
-  width: 50px;
-  height: 50px;
+  .return__btn {
+    border-radius: 11px;
+    border: none;
+    background-color: #12a0d6;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+  }
+  .return__Nobtn {
+    border-radius: 11px;
+    background-color: #ffffff;
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .return__returnering {
@@ -66,32 +65,38 @@
   position: relative;
   top: 0;
   left: 0;
+  .return__package {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+    margin: auto;
+    margin-top: 40px;
+  }
+
+  .return__scanner {
+    position: absolute;
+    top: 140px;
+    left: 84px;
+  }
 }
-.return__parent .return__package {
-  position: relative;
-  top: 0;
-  left: 0;
+.returnNo__text {
+  text-align: center;
+  margin-top: 200px;
+}
+
+.returnNo__input {
   display: block;
   margin: auto;
-  margin-top: 40px;
-}
-.return__parent .return__scanner {
-  position: absolute;
-  top: 140px;
-  left: 84px;
+  width: 250px;
+  height: 70px;
+  border-radius: 15px;
+  font-size: 40px;
 }
 
-.return__info {
-  position: absolute;
-  bottom: 0px;
-  right: 11px;
-  text-align: center;
-  color: white;
-  font-size: 22px;
-}
-
-.return__background {
-  width: 274px;
-  height: 140px;
-  margin-left: 93px;
+.returnNo__confirm {
+  background-color: #12a0d6;
+  border-radius: 15px;
+  width: 140px;
+  height: 50px;
 }
