--- a/returnNo.scss
+++ b/returnNo.scss
@@ -96,7 +96,13 @@
 
 .returnNo__confirm {
   background-color: #12a0d6;
-  border-radius: 15px;
-  width: 140px;
-  height: 50px;
+  border-radius: 28px;
+  width: 170px;
+  height: 53px;
+  color: #ffffff;
+  border: none;
+  font-size: 25px;
+  display: block;
+  margin: auto;
+  margin-top: 200px;
 }
