--- a/returnNo.scss
+++ b/returnNo.scss
@@ -54,6 +54,9 @@
     width: 50px;
     height: 50px;
   }
+  .return__btnImg {
+    margin-top: -12px;
+  }
 }
 
 .return__returnering {
@@ -98,7 +101,7 @@
   background-color: #12a0d6;
   border-radius: 28px;
   width: 170px;
-  height: 53px;
+  height: 60px;
   color: #ffffff;
   border: none;
   font-size: 25px;
