--- a/Styles/pages/index.css
+++ b/Styles/pages/index.css
@@ -23,13 +23,8 @@
   margin-left: 30px;
   font-family: "Exo 2", sans-serif;
 }
-.home__body .home__package {
-  display: block;
-  margin: auto;
-  margin-top: 15px;
-  width: 310px;
-}
-.home__body .sidenav {
+
+.sidenav {
   height: 100%;
   position: fixed;
   z-index: 1;
@@ -39,8 +34,10 @@
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  width: 0;
 }
-.home__body .sidenav a {
+
+.sidenav a {
   padding: 8px 8px 32px;
   text-align: center;
   text-decoration: none;
@@ -49,34 +46,48 @@
   display: block;
   transition: 0.3s;
 }
-.home__body .sidenav a:hover {
+
+.sidenav a:hover {
   color: #f1f1f1;
 }
-.home__body .sidenav .closebtn {
+
+.sidenav .closebtn {
   position: absolute;
   top: 0;
   font-size: 36px;
 }
+
 @media screen and (max-height: 450px) {
-  .home__body .sidenav {
+  .sidenav {
     padding-top: 15px;
   }
-  .home__body .sidenav a {
+
+  .sidenav a {
     font-size: 18px;
   }
 }
-.home__body .home__icon {
+.home__package {
+  display: block;
+  margin: auto;
+  margin-top: 15px;
+  width: 310px;
+}
+
+.home__icon {
   margin-top: 20px;
   margin-left: 18px;
 }
-.home__body .home__iconGuide {
+
+.home__iconGuide {
   margin-left: 25px;
 }
-.home__body .home__iconReturn {
+
+.home__iconReturn {
   margin-top: 20px;
   margin-left: 13px;
 }
-.home__body .home__iconHistoric {
+
+.home__iconHistoric {
   margin-top: 20px;
   margin-left: 10px;
 }
@@ -244,4 +255,133 @@
 }
 .arrived__body .open__switch .slider.round:before {
   border-radius: 50%;
+}
+
+.return__btns {
+  display: flex;
+}
+.return__btns .return__btn {
+  border-radius: 11px;
+  border: none;
+  background-color: #12a0d6;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+.return__btns .return__Nobtn {
+  border-radius: 11px;
+  background-color: #ffffff;
+  width: 50px;
+  height: 50px;
+}
+.return__btns .return__btnImg {
+  margin-top: -12px;
+}
+
+.return__returnering {
+  display: flex;
+  justify-content: space-between;
+}
+
+.return__parent {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.return__parent .return__package {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  margin: auto;
+  margin-top: 40px;
+}
+.return__parent .return__scanner {
+  position: absolute;
+  top: 140px;
+  left: 84px;
+}
+
+.returnNo__text {
+  text-align: center;
+  margin-top: 200px;
+}
+
+.returnNo__input {
+  display: block;
+  margin: auto;
+  width: 250px;
+  height: 70px;
+  border-radius: 15px;
+  font-size: 40px;
+}
+
+.returnNo__confirm {
+  background-color: #12a0d6;
+  border-radius: 28px;
+  width: 170px;
+  height: 60px;
+  color: #ffffff;
+  border: none;
+  font-size: 25px;
+  display: block;
+  margin: auto;
+  margin-top: 200px;
+}
+
+.return__btns {
+  display: flex;
+}
+.return__btns .return__btn {
+  border-radius: 11px;
+  border: none;
+  background-color: #12a0d6;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+.return__btns .return__Nobtn {
+  border-radius: 11px;
+  background-color: #ffffff;
+  width: 50px;
+  height: 50px;
+}
+
+.return__returnering {
+  display: flex;
+  justify-content: space-between;
+}
+
+.return__parent {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.return__parent .return__package {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  margin: auto;
+  margin-top: 40px;
+}
+.return__parent .return__scanner {
+  position: absolute;
+  top: 140px;
+  left: 84px;
+}
+
+.return__info {
+  position: absolute;
+  bottom: 0px;
+  right: 11px;
+  text-align: center;
+  color: white;
+  font-size: 22px;
+}
+
+.return__background {
+  width: 274px;
+  height: 140px;
+  margin-left: 93px;
 }
