--- a/Styles/pages/home.scss
+++ b/Styles/pages/home.scss
@@ -26,66 +26,67 @@
     margin-left: 30px;
     font-family: "Exo 2", sans-serif;
   }
+}
+.sidenav {
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #12a0d6;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  width: 0;
+}
 
-  .home__package {
-    display: block;
-    margin: auto;
-    margin-top: 15px;
-    width: 310px;
-  }
+.sidenav a {
+  padding: 8px 8px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  color: #ffffff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  font-size: 36px;
+}
+
+@media screen and (max-height: 450px) {
   .sidenav {
-    height: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #12a0d6;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+    padding-top: 15px;
   }
-
   .sidenav a {
-    padding: 8px 8px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-size: 15px;
-    color: #ffffff;
-    display: block;
-    transition: 0.3s;
+    font-size: 18px;
   }
+}
 
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    font-size: 36px;
-  }
-
-  @media screen and (max-height: 450px) {
-    .sidenav {
-      padding-top: 15px;
-    }
-    .sidenav a {
-      font-size: 18px;
-    }
-  }
-  .home__icon {
-    margin-top: 20px;
-    margin-left: 18px;
-  }
-  .home__iconGuide {
-    margin-left: 25px;
-  }
-  .home__iconReturn {
-    margin-top: 20px;
-    margin-left: 13px;
-  }
-  .home__iconHistoric {
-    margin-top: 20px;
-    margin-left: 10px;
-  }
+.home__package {
+  display: block;
+  margin: auto;
+  margin-top: 15px;
+  width: 310px;
+}
+.home__icon {
+  margin-top: 20px;
+  margin-left: 18px;
+}
+.home__iconGuide {
+  margin-left: 25px;
+}
+.home__iconReturn {
+  margin-top: 20px;
+  margin-left: 13px;
+}
+.home__iconHistoric {
+  margin-top: 20px;
+  margin-left: 10px;
 }
