--- a/Style.css
+++ b/Style.css
@@ -260,7 +260,7 @@
 .return__btns {
   display: flex;
 }
-.return__btns .return__btn {
+.return__btns .returnNo__btn {
   border-radius: 11px;
   border: none;
   background-color: #12a0d6;
@@ -268,13 +268,13 @@
   height: 50px;
   margin-right: 10px;
 }
-.return__btns .return__Nobtn {
+.return__btns .returnNo__Nobtn {
   border-radius: 11px;
   background-color: #ffffff;
   width: 50px;
   height: 50px;
 }
-.return__btns .return__btnImg {
+.return__btns .returnNo__btnImg {
   margin-top: -12px;
 }
 
@@ -329,47 +329,6 @@
   margin-top: 200px;
 }
 
-.sidenav {
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #12a0d6;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 32px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 15px;
-  color: #ffffff;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  font-size: 36px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-
-  .sidenav a {
-    font-size: 18px;
-  }
-}
 .return__btns {
   display: flex;
 }
