--- a/Styles/pages/returnNo.scss
+++ b/Styles/pages/returnNo.scss
@@ -1,6 +1,6 @@
 .return__btns {
   display: flex;
-  .return__btn {
+  .returnNo__btn {
     border-radius: 11px;
     border: none;
     background-color: #12a0d6;
@@ -8,13 +8,13 @@
     height: 50px;
     margin-right: 10px;
   }
-  .return__Nobtn {
+  .returnNo__Nobtn {
     border-radius: 11px;
     background-color: #ffffff;
     width: 50px;
     height: 50px;
   }
-  .return__btnImg {
+  .returnNo__btnImg {
     margin-top: -12px;
   }
 }
