--- a/Registrering.css
+++ b/Registrering.css
@@ -26,6 +26,7 @@
   display: block;
   margin: auto;
   margin: 0px auto;
+  padding: 10px;
 }
 
 .telefonnummer {
@@ -35,14 +36,14 @@
   margin-left: 5px;
 }
 
-.danmarkogpil {
+.danmarkpiloglinje {
   display: flex;
+  align-items: center;
   padding-top: 45px;
 }
-.danmarkogpil .piltillande {
+.danmarkpiloglinje .piltillande {
   height: 20px;
-  padding-top: 15px;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 .linjemellempilogtfl {
@@ -53,7 +54,16 @@
   text-align: right;
   color: #EBEAEA;
   margin-right: 5px;
-  margin-top: -40px;
+  border-left: 3px solid #EBEAEA;
+  padding-left: 10px;
+  border-style: hidden;
+  width: 160px;
+  margin-left: auto;
+}
+
+input::placeholder {
+  color: #EBEAEA;
+  font-size: 1.2em;
 }
 
 .linjeundertlf {
@@ -75,7 +85,8 @@
   background-color: #12A0D6;
   border-radius: 50px;
   color: white;
-  width: 150px;
+  font-weight: 300;
+  width: 165px;
   height: 50px;
   text-align: center;
   display: block;
