--- a/Registrering.scss
+++ b/Registrering.scss
@@ -27,7 +27,9 @@ display: flex;
     height: 285px;
     display: block;
     margin: auto;
-    margin: 0px auto
+    margin: 0px auto;
+    padding: 10px;
+
 }
 
 
@@ -38,13 +40,13 @@ display: flex;
     margin-left: 5px;
 }
 
-.danmarkogpil{
+.danmarkpiloglinje{
     display: flex;
+    align-items: center;
     padding-top: 45px;
     .piltillande{
         height: 20px;
-        padding-top: 15px;
-    margin-left: 5px;
+    margin-left: 10px;
     }
 
 }
@@ -58,8 +60,18 @@ display: flex;
     text-align: right;
     color: #EBEAEA;
     margin-right: 5px;
-    margin-top: -40px;
+    border-left: 3px solid #EBEAEA;
+    padding-left: 10px;
+    border-style: hidden;
+    width: 160px;
+margin-left: auto;
 }
+
+input::placeholder {
+    color:#EBEAEA;
+    font-size: 1.2em;
+  }
+
 
 .linjeundertlf{
     display: block;
@@ -81,7 +93,8 @@ display: flex;
     background-color: #12A0D6;
     border-radius: 50px;
     color: white;
-    width: 150px;
+    font-weight: 300;
+    width: 165px;
     height: 50px;
     text-align: center;
     display: block;
