--- a/Styles/pages/Registrering.scss
+++ b/Styles/pages/Registrering.scss
@@ -1,7 +1,7 @@
 .registrering{
 background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 width: 100%;
-height: 926px;
+min-height: 100vh;
 background-repeat: no-repeat;
 margin: 0;
 font-family: 'Exo 2', sans-serif;
