--- a/Verificeringskode.css
+++ b/Verificeringskode.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
-.verificeringskode {
+body {
   background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
   width: 100%;
-  height: 926px;
+  min-height: 100vh;
   background-repeat: no-repeat;
   margin: 0;
   font-family: "Exo 2", sans-serif;
@@ -18,6 +18,36 @@
   margin-top: 75px;
 }
 
+.verificeringskode {
+  text-align: center;
+  display: block;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.telefonnummer {
+  margin-left: 14px;
+}
+
+.input {
+  width: 57px;
+  height: 64px;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 15px;
+  background-color: #F4F4F4;
+  border: none;
+  display: flex;
+}
+
+.inputcontainer {
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  margin-left: 54px;
+  margin-right: 54px;
+}
+
 .verificeringssection {
   background-color: #FFFFFF;
   border-radius: 50px;
@@ -27,6 +57,16 @@
   margin: auto;
   margin: 0px auto;
   padding: 10px;
+}
+
+.tilsendverificeringskodeigen {
+  color: #12A0D6;
+  display: flex;
+  align-items: center;
+}
+.tilsendverificeringskodeigen .pil {
+  height: 20px;
+  margin-left: 10px;
 }
 
 .tilsendkode {
