--- a/Styles/pages/Verificeringskode.scss
+++ b/Styles/pages/Verificeringskode.scss
@@ -26,6 +26,7 @@ display: flex;
 
 .telefonnummer{
     margin-left: 14px;
+    margin-bottom: 40px;
 }
 
 
@@ -42,10 +43,7 @@ display: flex;
 
 .inputcontainer {
     display: flex;
-    justify-content: center;
-    justify-content: space-between;
-    margin-left: 54px;
-    margin-right: 54px;
+    justify-content: space-around;
 }
 
 .verificeringssection{
@@ -76,6 +74,16 @@ display: flex;
     margin: auto;
     padding-top: 30px;
     text-align: center;
+    position: relative;
+    top: -90px;
+    right: 40px;
+}
+
+.pil{
+    height: 13px;
+    position: relative;
+    top: -72px;
+    right: 115px;
 }
 
 .fortsæt{
