--- a/Verificeringskode.css
+++ b/Verificeringskode.css
@@ -27,6 +27,7 @@ body {
 
 .telefonnummer {
   margin-left: 14px;
+  margin-bottom: 40px;
 }
 
 .input {
@@ -42,10 +43,7 @@ body {
 
 .inputcontainer {
   display: flex;
-  justify-content: center;
-  justify-content: space-between;
-  margin-left: 54px;
-  margin-right: 54px;
+  justify-content: space-around;
 }
 
 .verificeringssection {
@@ -75,6 +73,16 @@ body {
   margin: auto;
   padding-top: 30px;
   text-align: center;
+  position: relative;
+  top: -90px;
+  right: 40px;
+}
+
+.pil {
+  height: 13px;
+  position: relative;
+  top: -72px;
+  right: 115px;
 }
 
 .fortsæt {
