--- a/Styles/pages/index.scss
+++ b/Styles/pages/index.scss
@@ -5,5 +5,5 @@
 @forward 'return';
 @forward 'historic';
 @forward 'Registrering';
-@forward 'Verificeringskode'
+@forward 'Verificeringskode';
 //@forward 'historic';
