--- a/lågelukkes.scss
+++ b/lågelukkes.scss
@@ -1,16 +1,14 @@
-.husk{
-    font-family: 'Exo 2', sans-serif;
+.husk {
+  font-family: "Exo 2", sans-serif;
 }
 
-video{
-
+video {
 }
 
-
-.lågelukkes{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 100vh;
+.lågelukkes {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100vh;
 }
