--- a/Style.css
+++ b/Style.css
@@ -502,10 +502,11 @@
   display: block;
   margin: auto;
   margin-top: 75px;
+  margin-bottom: 1px;
 }
 
 .registeringsection {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 50px;
   width: 90%;
   height: 285px;
@@ -538,9 +539,9 @@
 
 .indtasttlf {
   text-align: right;
-  color: #EBEAEA;
+  color: #ebeaea;
   margin-right: 5px;
-  border-left: 3px solid #EBEAEA;
+  border-left: 3px solid #ebeaea;
   padding-left: 10px;
   border-style: hidden;
   width: 160px;
@@ -548,7 +549,7 @@
 }
 
 input::placeholder {
-  color: #EBEAEA;
+  color: #ebeaea;
   font-size: 1.2em;
 }
 
@@ -560,15 +561,15 @@ input::placeholder {
 }
 
 .verificeringskodeSMS {
-  color: #12A0D6;
+  color: #12a0d6;
   display: block;
   margin: auto;
   padding-top: 30px;
   text-align: center;
 }
 
-.fortsæt {
-  background-color: #12A0D6;
+.registrering__fortsæt {
+  background-color: #12a0d6;
   border-radius: 50px;
   color: white;
   font-weight: 300;
@@ -578,6 +579,8 @@ input::placeholder {
   display: block;
   margin: auto;
   padding-top: 20px;
+  margin-bottom: 70px;
+  text-decoration: none;
 }
 
 body {
@@ -597,6 +600,7 @@ body {
   display: block;
   margin: auto;
   margin-top: 75px;
+  margin-bottom: 1px;
 }
 
 .verificeringskode {
@@ -617,7 +621,7 @@ body {
   font-size: 25px;
   text-align: center;
   border-radius: 15px;
-  background-color: #F4F4F4;
+  background-color: #f4f4f4;
   border: none;
   display: flex;
 }
@@ -628,7 +632,7 @@ body {
 }
 
 .verificeringssection {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 50px;
   width: 90%;
   height: 285px;
@@ -639,7 +643,7 @@ body {
 }
 
 .tilsendverificeringskodeigen {
-  color: #12A0D6;
+  color: #12a0d6;
   display: flex;
   align-items: center;
 }
@@ -649,7 +653,7 @@ body {
 }
 
 .tilsendkode {
-  color: #12A0D6;
+  color: #12a0d6;
   display: block;
   margin: auto;
   padding-top: 30px;
@@ -667,7 +671,7 @@ body {
 }
 
 .fortsæt {
-  background-color: #12A0D6;
+  background-color: #12a0d6;
   border-radius: 50px;
   color: white;
   font-weight: 300;
@@ -677,6 +681,8 @@ body {
   display: block;
   margin: auto;
   padding-top: 20px;
+  margin-bottom: 70px;
+  text-decoration: none;
 }
 
 .guide__body {
