--- a/Styles/pages/Registrering.scss
+++ b/Styles/pages/Registrering.scss
@@ -1,103 +1,97 @@
-.registrering{
-background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-width: 100%;
-min-height: 100vh;
-background-repeat: no-repeat;
-margin: 0;
-font-family: 'Exo 2', sans-serif;
-display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow-y: hidden;
+.registrering {
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  width: 100%;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  margin: 0;
+  font-family: "Exo 2", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: hidden;
 }
 
-
-
-
-.logo{
-    display: block;
-    margin: auto;
-    margin-top: 75px;
+.logo {
+  display: block;
+  margin: auto;
+  margin-top: 75px;
+  margin-bottom: 1px;
 }
 
-.registeringsection{
-    background-color: #FFFFFF;
-    border-radius: 50px;
-    width: 90%;
-    height: 285px;
-    display: block;
-    margin: auto;
-    margin: 0px auto;
-    padding: 10px;
-
+.registeringsection {
+  background-color: #ffffff;
+  border-radius: 50px;
+  width: 90%;
+  height: 285px;
+  display: block;
+  margin: auto;
+  margin: 0px auto;
+  padding: 10px;
 }
 
-
-.telefonnummer{
-    color: black;
-    font-size: 20px;
-    padding-top: 30px;
-    margin-left: 5px;
+.telefonnummer {
+  color: black;
+  font-size: 20px;
+  padding-top: 30px;
+  margin-left: 5px;
 }
 
-.danmarkpiloglinje{
-    display: flex;
-    align-items: center;
-    padding-top: 45px;
-    .piltillande{
-        height: 20px;
+.danmarkpiloglinje {
+  display: flex;
+  align-items: center;
+  padding-top: 45px;
+  .piltillande {
+    height: 20px;
     margin-left: 10px;
-    }
-
+  }
 }
 
-.linjemellempilogtfl{
-    width: 100%;
+.linjemellempilogtfl {
+  width: 100%;
 }
 
-
-.indtasttlf{
-    text-align: right;
-    color: #EBEAEA;
-    margin-right: 5px;
-    border-left: 3px solid #EBEAEA;
-    padding-left: 10px;
-    border-style: hidden;
-    width: 160px;
-margin-left: auto;
+.indtasttlf {
+  text-align: right;
+  color: #ebeaea;
+  margin-right: 5px;
+  border-left: 3px solid #ebeaea;
+  padding-left: 10px;
+  border-style: hidden;
+  width: 160px;
+  margin-left: auto;
 }
 
 input::placeholder {
-    color:#EBEAEA;
-    font-size: 1.2em;
-  }
-
-
-.linjeundertlf{
-    display: block;
-    margin: auto;
-    width: 320px;
-    padding-top: 11px;
+  color: #ebeaea;
+  font-size: 1.2em;
 }
 
-.verificeringskodeSMS{
-    color: #12A0D6;
-    display: block;
-    margin: auto;
-    padding-top: 30px;
-    text-align: center;
+.linjeundertlf {
+  display: block;
+  margin: auto;
+  width: 320px;
+  padding-top: 11px;
 }
 
+.verificeringskodeSMS {
+  color: #12a0d6;
+  display: block;
+  margin: auto;
+  padding-top: 30px;
+  text-align: center;
+}
 
-.fortsæt{
-    background-color: #12A0D6;
-    border-radius: 50px;
-    color: white;
-    font-weight: 300;
-    width: 165px;
-    height: 50px;
-    text-align: center;
-    display: block;
-    margin: auto;
-    padding-top: 20px;
+.registrering__fortsæt {
+  background-color: #12a0d6;
+  border-radius: 50px;
+  color: white;
+  font-weight: 300;
+  width: 165px;
+  height: 50px;
+  text-align: center;
+  display: block;
+  margin: auto;
+  padding-top: 20px;
+  margin-bottom: 70px;
+  text-decoration: none;
 }
