--- a/Styles/pages/Verificeringskode.scss
+++ b/Styles/pages/Verificeringskode.scss
@@ -1,100 +1,101 @@
-body{
-    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-width: 100%;
-min-height: 100vh;
-background-repeat: no-repeat;
-margin: 0;
-font-family: 'Exo 2', sans-serif;
-display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow-y: hidden;
+body {
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  width: 100%;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  margin: 0;
+  font-family: "Exo 2", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: hidden;
 }
 
-.logo{
-    display: block;
-    margin: auto;
-    margin-top: 75px;
+.logo {
+  display: block;
+  margin: auto;
+  margin-top: 75px;
+  margin-bottom: 1px;
 }
 
-.verificeringskode{
-    text-align: center;
-    display: block;
-    margin: auto;
-    margin-top: 30px;
+.verificeringskode {
+  text-align: center;
+  display: block;
+  margin: auto;
+  margin-top: 30px;
 }
 
-.telefonnummer1{
-    margin-left: 14px;
-    margin-bottom: 40px;
+.telefonnummer1 {
+  margin-left: 14px;
+  margin-bottom: 40px;
 }
-
 
 .input {
-    width: 57px;
-    height: 64px;
-    font-size: 25px;
-    text-align: center;
-    border-radius: 15px;
-    background-color: #F4F4F4;
-    border: none;
-    display: flex;
+  width: 57px;
+  height: 64px;
+  font-size: 25px;
+  text-align: center;
+  border-radius: 15px;
+  background-color: #f4f4f4;
+  border: none;
+  display: flex;
 }
 
 .inputcontainer {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
-.verificeringssection{
-    background-color: #FFFFFF;
-    border-radius: 50px;
-    width: 90%;
-    height: 285px;
-    display: block;
-    margin: auto;
-    margin: 0px auto;
-    padding: 10px;
+.verificeringssection {
+  background-color: #ffffff;
+  border-radius: 50px;
+  width: 90%;
+  height: 285px;
+  display: block;
+  margin: auto;
+  margin: 0px auto;
+  padding: 10px;
 }
 
-.tilsendverificeringskodeigen{
-   color: #12A0D6;
-   display: flex;
-   align-items: center;
-   .pil{
+.tilsendverificeringskodeigen {
+  color: #12a0d6;
+  display: flex;
+  align-items: center;
+  .pil {
     height: 20px;
     margin-left: 10px;
-   }
+  }
 }
 
-
-.tilsendkode{
-    color: #12A0D6;
-    display: block;
-    margin: auto;
-    padding-top: 30px;
-    text-align: center;
-    position: relative;
-    top: -90px;
-    right: 40px;
+.tilsendkode {
+  color: #12a0d6;
+  display: block;
+  margin: auto;
+  padding-top: 30px;
+  text-align: center;
+  position: relative;
+  top: -90px;
+  right: 40px;
 }
 
-.pil{
-    height: 13px;
-    position: relative;
-    top: -72px;
-    right: 115px;
+.pil {
+  height: 13px;
+  position: relative;
+  top: -72px;
+  right: 115px;
 }
 
-.fortsæt{
-    background-color: #12A0D6;
-    border-radius: 50px;
-    color: white;
-    font-weight: 300;
-    width: 165px;
-    height: 50px;
-    text-align: center;
-    display: block;
-    margin: auto;
-    padding-top: 20px;
+.fortsæt {
+  background-color: #12a0d6;
+  border-radius: 50px;
+  color: white;
+  font-weight: 300;
+  width: 165px;
+  height: 50px;
+  text-align: center;
+  display: block;
+  margin: auto;
+  padding-top: 20px;
+  margin-bottom: 70px;
+  text-decoration: none;
 }
