--- a/Styles/pages/historic.scss
+++ b/Styles/pages/historic.scss
@@ -14,6 +14,8 @@
   grid-template-columns: 2fr 1fr;
   padding-left: 20px;
   position: relative;
+  border: solid grey 1px;
+  margin-bottom: 10px;
   .historic__number {
     grid-column-start: 1;
     margin: 0;
@@ -45,6 +47,8 @@
   background-color: #ffffff;
   display: grid;
   padding-left: 20px;
+  margin-bottom: 10px;
+  border: solid grey 1px;
   .historic__oldtext {
     margin: 0;
     padding-bottom: 20px;
