--- a/Styles/pages/index.css
+++ b/Styles/pages/index.css
@@ -404,6 +404,8 @@
   grid-template-columns: 2fr 1fr;
   padding-left: 20px;
   position: relative;
+  border: solid grey 1px;
+  margin-bottom: 10px;
 }
 .historic__box .historic__number {
   grid-column-start: 1;
@@ -435,6 +437,8 @@
   background-color: #ffffff;
   display: grid;
   padding-left: 20px;
+  margin-bottom: 10px;
+  border: solid grey 1px;
 }
 .historic__oldbox .historic__oldtext {
   margin: 0;
