--- a/Style.css
+++ b/Style.css
@@ -303,7 +303,12 @@
   left: 84px;
 }
 
+.return__textnr {
+  padding-right: 123px;
+}
+
 .returnNo__text {
+  font-family: "Exo 2", sans-serif;
   text-align: center;
   margin-top: 200px;
 }
@@ -328,6 +333,7 @@
   display: block;
   margin: auto;
   margin-top: 200px;
+  text-decoration: none;
 }
 
 .return__btns {
