--- a/Styles/pages/returnNo.scss
+++ b/Styles/pages/returnNo.scss
@@ -43,7 +43,11 @@
     left: 84px;
   }
 }
+.return__textnr {
+  padding-right: 123px;
+}
 .returnNo__text {
+  font-family: "Exo 2", sans-serif;
   text-align: center;
   margin-top: 200px;
 }
@@ -68,4 +72,5 @@
   display: block;
   margin: auto;
   margin-top: 200px;
+  text-decoration: none;
 }
