--- a/Styles/pages/index.css
+++ b/Styles/pages/index.css
@@ -872,39 +872,36 @@ input[type=range]:focus::-ms-fill-upper {
   font-family: "Exo 2", sans-serif;
 }
 
-video {
-  margin-top: 30px;
-}
-
 .lågelukkes {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 100vh;
+  margin: 0;
 }
 
-.open__switch {
+.swipe_luk {
   position: relative;
   display: inline-block;
-  width: 60px;
+  width: 290px;
   height: 34px;
-  margin-left: 35px;
   /*input:focus + .slider {
     box-shadow: 0 0 1px #12a0d6;
   }
   */
   /* Rounded sliders */
 }
-.open__switch .open__switch input {
+.swipe_luk .swipe_luk input {
   opacity: 0;
   width: 0;
   height: 0;
 }
-.open__switch .arrived__box {
+.swipe_luk .check {
   margin-left: 31px;
+  opacity: 0;
 }
-.open__switch .slider {
+.swipe_luk .swipe {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -917,30 +914,33 @@ video {
   width: 210px;
   height: 45px;
 }
-.open__switch .slider:before {
+.swipe_luk .swipe:before {
   position: absolute;
   content: "";
-  height: 47px;
-  width: 45px;
+  height: 40px;
+  width: 40px;
   left: 6px;
-  bottom: 4px;
+  bottom: 2px;
   background-color: white;
   transition: 0.4s;
 }
-.open__switch input:checked + .slider {
+.swipe_luk input:checked + .swipe {
   background-color: #12a0d6;
   color: #12a0d6;
 }
-.open__switch input:checked + .slider:before {
+.swipe_luk input:checked + .swipe:before {
   transform: translateX(230px);
 }
-.open__switch .slider.round {
+.swipe_luk .swipe.knappen {
   border-radius: 34px;
   padding-left: 80px;
-  padding-top: 10px;
   font-size: 26px;
   color: white;
+  font-family: "Exo 2";
+  font-size: 1.3rem;
+  line-height: 40px;
+  top: -50px;
 }
-.open__switch .slider.round:before {
+.swipe_luk .swipe.knappen:before {
   border-radius: 50%;
 }
