--- a/Style.css
+++ b/Style.css
@@ -653,6 +653,7 @@ input::placeholder {
   margin: auto;
   margin: 0px auto;
   padding: 10px;
+  margin-top: 85px;
 }
 
 .tilsendverificeringskodeigen {
@@ -947,4 +948,3 @@ input[type=range]:focus::-ms-fill-upper {
 .swipe_luk .swipe.knappen:before {
   border-radius: 50%;
 }
-/*# sourceMappingURL=Style.css.map */
