--- a/Styles/pages/index.css
+++ b/Styles/pages/index.css
@@ -653,6 +653,7 @@ input::placeholder {
   margin: auto;
   margin: 0px auto;
   padding: 10px;
+  margin-top: 85px;
 }
 
 .tilsendverificeringskodeigen {
